@@ -129,7 +129,7 @@ _lstopo() {
 		COMPREPLY=( "<line of text>" "" )
 		;;
 	    --palette)
-		COMPREPLY=( `compgen -W "grey" "greyscale" "default" "colors" -- "$cur"` )
+		COMPREPLY=( `compgen -W "grey" "greyscale" "default" "colors" "white" "none" -- "$cur"` )
 		;;
 	    --binding-color | --disallowed-color)
 		COMPREPLY=( `compgen -W "none" -- "$cur"` )
