@@ -435,9 +435,10 @@ Additional legend lines may also be specified inside the topology using the
 \fB\-\-grey\fR, \fB\-\-greyscale\fR
 Use greyscale instead of colors in the graphical output.
 .TP
-\fB\-\-palette\fR <grey|greyscale|defaut|colors>
+\fB\-\-palette\fR <grey|greyscale|defaut|colors|white|none>
 Change the color palette.
 Passing \fIgrey\fR or \fIgreyscale\fR is identical to passing \fB\-\-grey\fR or \fB\-\-greyscale\fR.
+Passing \fIwhite\fR or \fInone\fR uses white instead of colors for all box backgrounds.
 Passing \fIdefault\fR or \fIcolors\fR reverts back to the default color palette.
 .TP
 \fB\-\-binding\-color\fR none
